Image stretch fixed

--- a/src/components/Images/ProfileNav/style.module.css
+++ b/src/components/Images/ProfileNav/style.module.css
@@ -1,4 +1,5 @@
 .titleImage {
+  object-fit: cover;
   border-radius: 50%;
   height: 150px;
   width: 150px;
