--- a/src/components/InsertProfileImage/style.module.css
+++ b/src/components/InsertProfileImage/style.module.css
@@ -40,6 +40,7 @@
 }
 
 .pictureHolder {
+  object-fit: cover;
   border-radius: 50%;
   margin-bottom: 15px;
 }
