--- a/src/modules/ProfileContainer/style.module.css
+++ b/src/modules/ProfileContainer/style.module.css
@@ -28,8 +28,7 @@
   transition: all 0.5s ease-in-out;
   transform: scale(1.03);
 }
-.imageDiv {
-}
+
 .image {
   object-fit: cover;
   border-top-left-radius: 20px;
